# pcdigitizer

./: .bumpversion.toml  .coveragerc  .editorconfig  .gitattributes  .gitignore  .pytest.ini  .ruff.toml  CHANGELOG.md  LICENSE.md  README.md  mkdocs.yml  pixi.toml  pyproject.toml
.github/workflows/: cla-sign-listener.yml  cla-verify-listener.yml  codecov.yml  docs.yml  tests.yml
docs/: development.md  gen_ref_pages.py
pcdigitizer/: __init__.py  pubchem.py  responses.py  task.py
pcdigitizer/data/: __init__.py  annotations.py  dissociation_constant.py  registry.py
tests/: conftest.py  test_dissociation_constant_processing.py  test_pc_api.py
tests/files/: annotations.json  dissociation-constants-1.json  sourcetable.csv
